Adding structure o chapter 2

--- a/relatorio.tex
+++ b/relatorio.tex
@@ -73,22 +73,52 @@ Aqui vão os dados coletados para o protocolo FTP.
 Aqui vai a análise dos dados coletados para o protocolo FTP.
 
 %-------------------------------------------------------
-\chapter{Segundo capítulo}
+\chapter{Ferramentas de Diagnóstico de Redes}
 \label{chap_segundo}
 
-\section{Protocolos}
-\label{sec_segundo_protocolos}
+\section{Monitoramento e Coleta de Pacotes}
+\label{sec_segundo_monitoramento}
 
-\section{Dados coletados}
-\label{sec_segundo}
+Aqui deve vir o processo de preparação para o monitoramento e captura de pacotes para as ferramentas de 
+diagnóstico de redes. Sendo estas:  
+\begin{enumerate}[a)]
+ \item Traceroute;
+ \item Ping;
+ \item Nmap;
+\end{enumerate}
 
-\section{Análise}
-\label{sec_segundo}
+\section{Traceroute}
+\label{sec_traceroute}
+Aqui vai algo sobre o traceroute.
+\subsection{Dados coletados}
+\label{sub_traceroute_dados}
+Aqui vão os dados coletados para a ferramenta traceroute.
 
-\subsection{Subseção}
-\label{subsec_nome}
+\subsection{Análise}
+\label{sub_traceroute_analise}
+Aqui vai a análise dos dados coletados para a ferramenta traceroute.
 
+\section{Ping}
+\label{sec_ping}
+Aqui vai algo sobre o ping.
+\subsection{Dados coletados}
+\label{sub_ping_dados}
+Aqui vão os dados coletados para a ferramenta ping.
 
+\subsection{Análise}
+\label{sub_ping_analise}
+Aqui vai a análise dos dados coletados para a ferramenta ping.
+
+\section{Nmap}
+\label{sec_nmap}
+Aqui vai algo sobre o nmap.
+\subsection{Dados coletados}
+\label{sub_nmap_dados}
+Aqui vão os dados coletados para a ferramenta nmap.
+
+\subsection{Análise}
+\label{sub_nmap_analise}
+Aqui vai a análise dos dados coletados para a ferramenta nmap.
 
 % Referencias bibliograficas
 \begin{thebibliography}{99}
