fixing small things

--- a/relatorio.tex
+++ b/relatorio.tex
@@ -26,7 +26,7 @@
   basicstyle=\footnotesize\ttfamily
 }
 
-\title{Fundamentos de Redes de Computadores: Camada de transporte}
+\title{Fundamentos de Redes de Computadores: \\ Camada de Transporte}
 \author{Arthur Jahn, Áulus Diniz}
 \date{26 de Outubro de 2015}    %para ocultar a data digite: \date{ }
 %*******************************************************
