--- a/relatorio.tex
+++ b/relatorio.tex
@@ -114,150 +114,150 @@ Após a execução do comando de captura de pacotes especificado na seção ante
 
 \section{Protocolo HTTP}
 \label{sec_http}
-O protocolo HTTP utilizado na camada de aplicação está vinculado à requsuição e ao carregamento de páginas \textit{web}, estas necessitam de tranferência confiável de dados para que nenhuma parte da informação presente na página seja perdida na rede. Nesse sentido, o protocolo HTTP utiliza na camada de transporte o protocolo TCP que disponibiliza em seus serviços transmissão confiável de dados. Esta é uma das características que tornam o TCP mais viável como protocolo de transporte para o HTTP na internet. 
+O protocolo HTTP utilizado na camada de aplicação está vinculado à requsuição e ao carregamento de páginas \textit{web}, estas necessitam de tranferência confiável de dados para que nenhuma parte da informação presente na página seja perdida na rede. Nesse sentido, o protocolo HTTP utiliza na camada de transporte o protocolo TCP que disponibiliza em seus serviços transmissão confiável de dados. Esta é uma das características que tornam o TCP mais viável como protocolo de transporte para o HTTP na internet.
 
-	Tendo como base o protocolo TCP, é necessário que ocorra então um \textit{handshake} em três vias para que mensagens HTTP possam transitar na rede. Além disso, menagens HTTP devem especificar a operação a ser executada (como GET, POST, PUT, etc) e a porta de destino utilizada que geralmente é a porta 80. 
+	Tendo como base o protocolo TCP, é necessário que ocorra então um \textit{handshake} em três vias para que mensagens HTTP possam transitar na rede. Além disso, menagens HTTP devem especificar a operação a ser executada (como GET, POST, PUT, etc) e a porta de destino utilizada que geralmente é a porta 80.
 \subsection{Dados coletados e Análise}
 \label{sub_http_dados}
 
 	Após a execução do comando de captura de pacotes especificado na seção anterior, foi aberto um novo terminal para teste de captura com o comando wget apontando para o nome de domínio do site tcpdump, agora escutando por pacotes tcp na porta 80:
 
 \begin{lstlisting}[language=bash]
-	
-	wget http://tcpdump.org/ 
-	
+
+	wget http://tcpdump.org/
+
 \end{lstlisting}
 
 	No arquivo de captura, dentre vários pacotes de tranferência de dados, foram selecionados alguns para demonstrar as operações executadas. São eles:
-	
+
 \begin{lstlisting}[language=bash]
-	72.660377    10.0.2.15 -> 173.194.42.51 TCP 74 60075 > http 
+	72.660377    10.0.2.15 -> 173.194.42.51 TCP 74 60075 > http
   [SYN] 	Seq=0 Win=14600 Len=0 MSS=1460 SACK_PERM=1 TSval=4846684 TSecr=0 WS=64
-	72.814395 173.194.42.51 -> 10.0.2.15    TCP 60 http > 60075 
+	72.814395 173.194.42.51 -> 10.0.2.15    TCP 60 http > 60075
   [SYN, ACK] Seq=0 Ack=1 Win=65535 Len=0 MSS=1460
-	72.814427    10.0.2.15 -> 173.194.42.51 TCP 54 60075 > http 
+	72.814427    10.0.2.15 -> 173.194.42.51 TCP 54 60075 > http
   [ACK] Seq=1 Ack=1 Win=14600 Len=0
-	72.814984    10.0.2.15 -> 173.194.42.51 HTTP 168 GET / HTTP/1.1 
-	72.815162 173.194.42.51 -> 10.0.2.15    TCP 60 http > 60075 
+	72.814984    10.0.2.15 -> 173.194.42.51 HTTP 168 GET / HTTP/1.1
+	72.815162 173.194.42.51 -> 10.0.2.15    TCP 60 http > 60075
   [ACK] Seq=1 Ack=115 Win=65535 Len=0
 	72.982628 173.194.42.51 -> 10.0.2.15    HTTP 550 HTTP/1.1 302 Found  (text/html)
-	
+
      		. . . [finishing connection with host 173.194.42.51]
-	
-	73.141034    10.0.2.15 -> 173.194.42.56 TCP 74 46241 > http 
+
+	73.141034    10.0.2.15 -> 173.194.42.56 TCP 74 46241 > http
   [SYN] Seq=0 Win=14600 Len=0 MSS=1460 SACK_PERM=1 TSval=4846804 TSecr=0 WS=64
-	73.301732 173.194.42.56 -> 10.0.2.15    TCP 60 http > 46241 
+	73.301732 173.194.42.56 -> 10.0.2.15    TCP 60 http > 46241
   [SYN, ACK] Seq=0 Ack=1 Win=65535 Len=0 MSS=1460
-     73.301836    10.0.2.15 -> 173.194.42.56 TCP 54 46241 > http 
+     73.301836    10.0.2.15 -> 173.194.42.56 TCP 54 46241 > http
   [ACK] Seq=1 Ack=1 Win=14600 Len=0
-     
+
      		. . . [data transfer with host 173.194.42.56]
-     					 					
+
 	73.700321 173.194.42.56 -> 10.0.2.15    HTTP 487 HTTP/1.1 200 OK  (text/html)
-	73.700456    10.0.2.15 -> 173.194.42.56 TCP 54 46241 > http 
-  [ACK] Seq=154 Ack=20286 Win=41122 Len=0     					
-	73.701066    10.0.2.15 -> 173.194.42.56 TCP 54 46241 > http 
+	73.700456    10.0.2.15 -> 173.194.42.56 TCP 54 46241 > http
+  [ACK] Seq=154 Ack=20286 Win=41122 Len=0
+	73.701066    10.0.2.15 -> 173.194.42.56 TCP 54 46241 > http
   [FIN, ACK] Seq=154 Ack=20286 Win=41122 Len=0
 	73.701286 173.194.42.56 -> 10.0.2.15    TCP 60 http > 46241
   [ACK] Seq=20286 Ack=155 Win=65535 Len=0
-	73.868597 173.194.42.56 -> 10.0.2.15    TCP 60 http > 46241 
+	73.868597 173.194.42.56 -> 10.0.2.15    TCP 60 http > 46241
   [FIN, ACK] Seq=20286 Ack=155 Win=65535 Len=0
-	73.868618    10.0.2.15 -> 173.194.42.56 TCP 54 46241 > http 
-  [ACK] Seq=155 Ack=20287 Win=41122 Len=0  					
-  
-     
+	73.868618    10.0.2.15 -> 173.194.42.56 TCP 54 46241 > http
+  [ACK] Seq=155 Ack=20287 Win=41122 Len=0
+
+
 \end{lstlisting}
-	
-	O primeiro bloco de pacotes mostrado é um \textit{handshake} em três vias do cliente IP 10.0.2.15 com o servidor IP 173.194.42.51, após o \textit{handshake}, o servidor notifica o cliente que encontrou a página requerida e o redireciona para outro servidor que poderá fornecer o pedido, com a flag HTTP 302. Esse comportamento pode indicar que o \textit{host} com IP 173.194.42.51 atua como um \textit{firewall} da rede. 
-	
+
+	O primeiro bloco de pacotes mostrado é um \textit{handshake} em três vias do cliente IP 10.0.2.15 com o servidor IP 173.194.42.51, após o \textit{handshake}, o servidor notifica o cliente que encontrou a página requerida e o redireciona para outro servidor que poderá fornecer o pedido, com a flag HTTP 302. Esse comportamento pode indicar que o \textit{host} com IP 173.194.42.51 atua como um \textit{firewall} da rede.
+
 	O segundo bloco de pacotes mostra novamente um \textit{handshake} em três vias do cliente IP 10.0.2.15, mas com o servidor IP 173.194.42.56 desta vez, e logo após se inicia a troca de mensagens para o recebimento da página requerida. Após a transferência, o servidor indica que a requisição está ok (HTTP 200), o cliente envia um ACK e após isso ocorre a finalização da conexão TCP, nos quatro últimos pacotes.
 
 	O log completo de saída da captura de pacotes pode ser visualizado no apêndice A.
 
 \section{Protocolo FTP}
 \label{sec_ftp}
-	
-	O protocolo FTP é utilizado para tranferências de arquivos e, para isso, necessita de tranferência confiável de dados pela internet. Sendo assim, também faz uso do protocolo TCP para transporte de mensagens. 
-	
-	Desse modo, é esperado para o FTP que ocorra um \textit{handshake} em três vias para estabelecimento de conexão com o servidor. Após o \textit{handshake}, ocorre a autenticação do usuário para que então ocorra o recebimento do arquivo. 
-	
+
+	O protocolo FTP é utilizado para tranferências de arquivos e, para isso, necessita de tranferência confiável de dados pela internet. Sendo assim, também faz uso do protocolo TCP para transporte de mensagens.
+
+	Desse modo, é esperado para o FTP que ocorra um \textit{handshake} em três vias para estabelecimento de conexão com o servidor. Após o \textit{handshake}, ocorre a autenticação do usuário para que então ocorra o recebimento do arquivo.
+
 \subsection{Dados coletados e Análise}
 \label{sub_ftp_dados}
 	Os passos descritos ateriormente podem ser observados nos pacotes recebidos na porta 21 monitorada quando se solicita um arquivo com o comando:
-	
-\begin{lstlisting}[language=bash]
-	
-	wget ftp://sppedtest.tele2.net/1KB.zip 
-	
-	
-\end{lstlisting}
-	
-	Os pacotes recebidos no arquivo de saída são:
-	
+
 \begin{lstlisting}[language=bash]
 
-     0.000000    10.0.2.15 -> 90.130.70.73 TCP 74 40899 > ftp [SYN] 
+	wget ftp://sppedtest.tele2.net/1KB.zip
+
+
+\end{lstlisting}
+
+	Os pacotes recebidos no arquivo de saída são:
+
+\begin{lstlisting}[language=bash]
+
+     0.000000    10.0.2.15 -> 90.130.70.73 TCP 74 40899 > ftp [SYN]
   Seq=0 Win=14600 Len=0 MSS=1460 SACK_PERM=1 TSval=8682778 TSecr=0 WS=64
-     0.328906 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [SYN, ACK] 
+     0.328906 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [SYN, ACK]
   Seq=0 Ack=1 Win=65535 Len=0 MSS=1460
-     0.328945    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [ACK] 
+     0.328945    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [ACK]
   Seq=1 Ack=1 Win=14600 Len=0
      0.632970 90.130.70.73 -> 10.0.2.15    FTP 74 Response: 220 (vsFTPd 2.3.5)
-     0.633001    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [ACK] Seq=1 Ack=21 
+     0.633001    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [ACK] Seq=1 Ack=21
   Win=14600 Len=0
      0.633211    10.0.2.15 -> 90.130.70.73 FTP 70 Request: USER anonymous
-     0.633472 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=21 Ack=17 
-  Win=65535 Len=0 
-     0.942161 90.130.70.73 -> 10.0.2.15    FTP 88 Response: 331 Please specify 
+     0.633472 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=21 Ack=17
+  Win=65535 Len=0
+     0.942161 90.130.70.73 -> 10.0.2.15    FTP 88 Response: 331 Please specify
   the password.
      0.942293    10.0.2.15 -> 90.130.70.73 FTP 67 Request: PASS -wget@
-     0.942528 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=55 Ack=30 
+     0.942528 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=55 Ack=30
   Win=65535 Len=0
      1.276685 90.130.70.73 -> 10.0.2.15    FTP 77 Response: 230 Login successful.
      1.276878    10.0.2.15 -> 90.130.70.73 FTP 60 Request: SYST
-     1.276996 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=78 Ack=36  
+     1.276996 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=78 Ack=36
   Win=65535 Len=0
      1.557551 90.130.70.73 -> 10.0.2.15    FTP 73 Response: 215 UNIX Type: L8
      1.557694    10.0.2.15 -> 90.130.70.73 FTP 59 Request: PWD
-     1.557827 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=97 Ack=41 
+     1.557827 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=97 Ack=41
   Win=65535 Len=0
      1.867867 90.130.70.73 -> 10.0.2.15    FTP 63 Response: 257 "/"
      1.868044    10.0.2.15 -> 90.130.70.73 FTP 62 Request: TYPE I
-     1.868320 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=106 Ack=49 
+     1.868320 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=106 Ack=49
   Win=65535 Len=0
      2.171201 90.130.70.73 -> 10.0.2.15    FTP 85 Response: 200 Switching to Binary mode.
      2.171366    10.0.2.15 -> 90.130.70.73 FTP 68 Request: SIZE 1KB.zip
-     2.171679 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=137 Ack=63 
+     2.171679 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=137 Ack=63
   Win=65535 Len=0
      2.475659 90.130.70.73 -> 10.0.2.15    FTP 64 Response: 213 1024
      2.475784    10.0.2.15 -> 90.130.70.73 FTP 60 Request: PASV
-     2.475938 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=147 Ack=69 
+     2.475938 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=147 Ack=69
   Win=65535 Len=0
-     2.884872 90.130.70.73 -> 10.0.2.15    FTP 105 Response: 227 Entering 
+     2.884872 90.130.70.73 -> 10.0.2.15    FTP 105 Response: 227 Entering
      Passive Mode (90,130,70,73,102,109)
-     2.922799    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [ACK] Seq=69 Ack=197 
+     2.922799    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [ACK] Seq=69 Ack=197
   Win=14600 Len=0
      3.198408    10.0.2.15 -> 90.130.70.73 FTP 68 Request: RETR 1KB.zip
-     3.198535 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=197 Ack=83 
+     3.198535 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=197 Ack=83
   Win=65535 Len=0
-     3.490530 90.130.70.73 -> 10.0.2.15    FTP 121 Response: 150 
+     3.490530 90.130.70.73 -> 10.0.2.15    FTP 121 Response: 150
      Opening BINARY mode data connection for 1KB.zip (1024 bytes).
-     3.490549    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [ACK] Seq=83 Ack=264 
+     3.490549    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [ACK] Seq=83 Ack=264
   Win=14600 Len=0
      3.797609 90.130.70.73 -> 10.0.2.15    FTP 78 Response: 226 Transfer complete.
-     3.797631    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [ACK] Seq=83 Ack=288 
+     3.797631    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [ACK] Seq=83 Ack=288
   Win=14600 Len=0
-     3.797766    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [FIN, ACK] Seq=83 Ack=288 
+     3.797766    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [FIN, ACK] Seq=83 Ack=288
   Win=14600 Len=0
-     3.797889 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=288 Ack=84 
+     3.797889 90.130.70.73 -> 10.0.2.15    TCP 60 ftp > 40899 [ACK] Seq=288 Ack=84
   Win=65535 Len=0
-     4.119880 90.130.70.73 -> 10.0.2.15    FTP 94 Response: 500 OOPS: 
+     4.119880 90.130.70.73 -> 10.0.2.15    FTP 94 Response: 500 OOPS:
   vsf_sysutil_recv_peek: no data
      4.119911    10.0.2.15 -> 90.130.70.73 TCP 54 40899 > ftp [RST] Seq=84 Win=0 Len=0
-	
-\end{lstlisting}	
 
-	Os pacotes recebidos evidenciam o \textit{handshake} entre o cliente IP 10.0.2.15 com o servidor IP 90.130.70.73 e é importante ressaltar que houve o processo de autorização (mesmo que de um usuário anônimo) para que a transferência ocorrece. Além disso, é possível observar também que o protocolo FTP não criptografa informações de usuário e senha, o que o torna pouco utilizado sem mecanismos de criptografia, como um protocolo ssl ou um ftp sob ssh. 
+\end{lstlisting}
+
+	Os pacotes recebidos evidenciam o \textit{handshake} entre o cliente IP 10.0.2.15 com o servidor IP 90.130.70.73 e é importante ressaltar que houve o processo de autorização (mesmo que de um usuário anônimo) para que a transferência ocorrece. Além disso, é possível observar também que o protocolo FTP não criptografa informações de usuário e senha, o que o torna pouco utilizado sem mecanismos de criptografia, como um protocolo ssl ou um ftp sob ssh.
 
 %-------------------------------------------------------
 \chapter{Ferramentas de Diagnóstico de Redes}
@@ -274,6 +274,15 @@ diagnóstico de redes. Sendo estas:
  \item Nmap;
 \end{enumerate}
 
+\subsection{Ping}
+Para a realização da analise de pacotes enviados e recebidos pela ferramenta de diagnóstico Ping, foi utilizado a ferramenta WireShark. Esse experimento foi realizado utilizando-se um Mac OS X e as configurações necessárias para a execução do experimento estão listadas abaixo.
+
+\begin{enumerate}
+    \item Instalação do WireShark - https://www.wireshark.org/#download
+    \item Instalação do XQuartz - Ferramenta que habilita o WireShark ser execultado no Mac OSX. - https://xquartz.macosforge.org/trac
+\end{enumerate}
+
+
 \section{Traceroute}
 \label{sec_traceroute}
 Aqui vai algo sobre o traceroute.
@@ -287,14 +296,118 @@ Aqui vai a análise dos dados coletados para a ferramenta traceroute.
 
 \section{Ping}
 \label{sec_ping}
-Aqui vai algo sobre o ping.
+O Ping é um software utilitário de administração de rede de computadores utilizada para testar a acessibilidade de um host em uma rede IP (Internet Protocol) e para medir o tempo de ida e volta de mensagens enviadas a partir do host de origem para o computador de destino.
+
+O Ping opera enviando uma mensagem baseada no ICMP (Internet Control Message Protocol), pacotes de solicitação de eco para o host de destino. Ele mede o tempo de ida e volta de transmissão para recepção, erros e perda de pacotes de relatório. Os resultados do teste geralmente incluem um resumo estatístico dos pacotes de resposta recebida, incluindo o mínimo, o máximo e os tempos médios de ida e volta.
+
 \subsection{Dados coletados}
 \label{sub_ping_dados}
-Aqui vão os dados coletados para a ferramenta ping.
+Para a coleta de pacotes da ferramenta ping, foi inicializada a análise da rede pelo WireShark. Em seguinda iniciou-se a ferramenta ping, conforme descrito anteriormente, execultando o comando:
+
+\begin{lstlisting}[language=bash]
+ping www.google.com
+\end{lstlisting}
+
+O resultado do comando acima é uma sequência de requisições do cliente(localhost) para o servidor, nesse caso: www.google.com.
+
+\begin{lstlisting}[language=bash]
+PING www.google.com (189.6.76.187): 56 data bytes
+64 bytes from 189.6.76.187: icmp_seq=0 ttl=61 time=12.604 ms
+64 bytes from 189.6.76.187: icmp_seq=1 ttl=61 time=9.938 ms
+64 bytes from 189.6.76.187: icmp_seq=2 ttl=61 time=15.585 ms
+64 bytes from 189.6.76.187: icmp_seq=3 ttl=61 time=13.192 ms
+64 bytes from 189.6.76.187: icmp_seq=4 ttl=61 time=13.233 ms
+64 bytes from 189.6.76.187: icmp_seq=5 ttl=61 time=13.645 ms
+
+--- www.google.com ping statistics ---
+6 packets transmitted, 6 packets received, 0.0% packet loss
+round-trip min/avg/max/stddev = 9.938/13.033/15.585/1.669 ms
+\end{lstlisting}
+
+Após o inicio da ferramenta ping, foi visto os pacotes de requisição e de resposta respectivamente conforme abaixo.
+
+\begin{lstlisting}[language=bash]
+Ethernet II, Src: Apple_c5:5c:c8 (3c:15:c2:c5:5c:c8), Dst: Technico_5b:59:b6
+(58:23:8c:5b:59:b6)
+  Destination: Technico_5b:59:b6 (58:23:8c:5b:59:b6)
+  Source: Apple_c5:5c:c8 (3c:15:c2:c5:5c:c8)
+  Type: IP (0x0800)
+Internet Protocol Version 4, Src: 192.168.0.14 (192.168.0.14), Dst: 189.6.76.187
+(189.6.76.187)
+  Version: 4
+  Header Length: 20 bytes
+  Differentiated Services Field: 0x00 (DSCP 0x00: Default; ECN: 0x00: Not-ECT
+  (Not ECN-Capable Transport))
+  Total Length: 84
+  Identification: 0x4883 (18563)
+  Flags: 0x00
+  Fragment offset: 0
+  Time to live: 64
+  Protocol: ICMP (1)
+  Header checksum: 0x67ae [validation disabled]
+  Source: 192.168.0.14 (192.168.0.14)
+  Destination: 189.6.76.187 (189.6.76.187)
+Internet Control Message Protocol
+  Type: 8 (Echo (ping) request)
+  Code: 0
+  Checksum: 0x151e [correct]
+  Identifier (BE): 53676 (0xd1ac)
+  Identifier (LE): 44241 (0xacd1)
+  Sequence number (BE): 9 (0x0009)
+  Sequence number (LE): 2304 (0x0900)
+\end{lstlisting}
+
+\begin{lstlisting}[language=bash]
+Ethernet II, Src: Technico_5b:59:b6 (58:23:8c:5b:59:b6), Dst: Apple_c5:5c:c8
+(3c:15:c2:c5:5c:c8)
+  Destination: Apple_c5:5c:c8 (3c:15:c2:c5:5c:c8)
+  Source: Technico_5b:59:b6 (58:23:8c:5b:59:b6)
+  Type: IP (0x0800)
+Internet Protocol Version 4, Src: 189.6.76.187 (189.6.76.187), Dst: 192.168.0.14
+(192.168.0.14)
+  Version: 4
+  Header Length: 20 bytes
+  Differentiated Services Field: 0x00 (DSCP 0x00: Default; ECN: 0x00: Not-ECT
+  (Not ECN-Capable Transport))
+  Total Length: 84
+  Identification: 0x00008d46
+  Flags: 0x00
+  Fragment offset: 0
+  Time to live: 61
+  Protocol: ICMP (1)
+  Header checksum: 0x67ae [validation disabled]
+  Source: 189.6.76.187 (189.6.76.187)
+  Destination: 192.168.0.14 (192.168.0.14)
+Internet Control Message Protocol
+  Type: 0 (Echo (ping) reply)
+  Code: 0
+  Checksum: 0x1d1e [correct]
+  Identifier (BE): 53676 (0xd1ac)
+  Identifier (LE): 44241 (0xacd1)
+  Sequence number (BE): 9 (0x0009)
+  Sequence number (LE): 2304 (0x0900)
+  Request frame: 207
+  Timestamp from icmp data: Oct 25, 2015 21:22:10.328175000 BRST
+  Timestamp from icmp data (relative): 0.013197000 seconds
+\end{lstlisting}
 
 \subsection{Análise}
 \label{sub_ping_analise}
-Aqui vai a análise dos dados coletados para a ferramenta ping.
+Uma vez que as requisições se repetem durante a execução do Ping, nesse relatório foram analisados uma requisição e uma resposta.
+
+Conforme dito na sessão \ref{sec_ping} o Ping utiliza o ICMP, nos pacotes acima nota-se a definição do protocolo que será utilizado para a comunicação entre os hosts.
+
+Além dos campos de destino e origem (destination e source) que definem a origem e o destino dos pacotes, o campo de \textit{"Timestamp"} onde é calculado o real valor de tempo do transporte do pacote. Nos pacotes analisados tem-se que o tempo de ping foi de 0.013197000 seconds, transformando para ms tem-se 13.197 ms, ou seja, os pacotes analisados nesse experimento são referentes à quarta requisão de Ping.
+
+Ao final da execução do Ping, é exibido os dados estatísticos.
+
+\begin{lstlisting}[language=bash]
+--- www.google.com ping statistics ---
+6 packets transmitted, 6 packets received, 0.0% packet loss
+round-trip min/avg/max/stddev = 9.938/13.033/15.585/1.669 ms
+\end{lstlisting}
+
+Nessa execução foram transmitidos 6 pacotes, sem perdas. O tempo minimo foi de 9.938 ms, o máximo de 15.585ms, a média de 13.033 e o desvio padrão do tempo médio de 1.669ms conforme visto no código acima.
 
 \section{Nmap}
 \label{sec_nmap}
